--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-# JQARPAIA.github.io
-Pagina Web
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Project: Blog</title>
+        <title>Página web de José Arpaia.</title>
     </head>
     <style>
         body{
