--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <strong><em>Un ultimo tip</em></strong>, aprovecha el tiempo, no es el unico recurso verdaderamente no renovable!
                 </p>
                 
-                <p id="end">Made by <a href="www.juventus.com.it"><em>José Arpaia</em></a> | <a href="#home">Inicio</a> | <a href="www.khanacademy.org">¿Quienes somos?</a></p>
+                <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a> | <a href="#home">Inicio</a> | <a href="https://https://www.youtube.com/channel/UCC_ltcXowipKi0wIl09dMIQ?view_as=subscriber">¿Quienes somos?</a></p>
             
     </body>
 </html>
