--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Página web de José Arpaia.</title>
+        <title>José Arpaia.</title>
     </head>
     <style>
         body{
