--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <style>
         body{
-            background-color: blue;
-            color: white;
-            font-family: arial;
+            background-color: light red;
+            color: yellow;
+            font-family: sans-serif;
         }
         h1{
             text-align: center;
@@ -39,11 +39,17 @@
             font-size: 25px;
             color: yellow;
         }
+        #memo{
+            text-align: right;
+            color: dark red;
+            font-family: helvetica;
+        }
+        
     </style>
     <body>
         
         <h1 id="home">Blog de la universidad</h1>
-        <h5>In developing process.<br>This is just an experiment<br>Please excuse us for the troubles.</h5>
+        <h5 id="memo">In developing process.<br>This is just an experiment.<br>Please excuse us for the troubles.</h5>
 
         <h3>INDICE</h3>
         <ul>
