--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <body>
         
         <h1 id="home">Blog de la universidad</h1>
-        <h5 id="memo">In developing process.<br>This is just an experiment.<br>Please excuse us for the troubles.</h5>
+        <h5 id="memo">In development process.<br>This is just an experiment.<br>Please excuse us for the troubles.</h5>
 
         <h3>INDICE</h3>
         <ul>
