--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <style>
         body{
-            background-color: light red;
-            color: yellow;
+            background-color: red;
+            color: blue;
             font-family: sans-serif;
         }
         h1{
