--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body{
             background-color: red;
-            color: blue;
+            color: white;
             font-family: sans-serif;
         }
         h1{
