--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ul>
         
         <h2 id="fp">Primer semestre</h2>
-        <h5>Agosto 26, 2019 by <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a></h5>
+        <h5>Agosto 26, 2019 <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a></h5>
         <p id="primer_post">Al comenzar el primer semestre del año, por allá por marzo-abril, las expectativas siempre son altas, sientes las ganas de aprender como si el mundo fuera tuyo, que todo es posible (si me permiten aclarar la primera semana suele ser esa, la de las sensaciones, la de las emociones, con la euforia a mil y los animos a montones), luego viene la realidad.</p>
         <p><strong>¿A que llamamos realidad?</strong> Pues, facil, el semestre, el estres del mismo que sin ese estres no tuviera sentido, casi que no podemos vivir sin el y viceversa. Ironico pero no deja de ser cierto.</p>
             <p>
@@ -69,7 +69,7 @@
             </p>
             
             <h2 id="sp">Los tiempos muertos</h2>
-             <h5>Septiembre 12, 2019 by <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a></h5>
+             <h5>Septiembre 12, 2019 by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a></h5>
             <p>
                 Tomando en cuenta que la universidad se trata de independencia(por supuesto tambien del estudio y aprendizaje). DEBEMOS APRENDER COMPROMISO. Con nosotros mismo, principalmente. Ocurre que hay veces que tenemos huecos entre clases, dos horas, una hora o el tiempo que sea es importantisimo aprovecharlo.
                 <br></p>
