--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             color: yellow;
             text-decoration: underline;
         }
+        h3{
+            color:yellow;
+        }
         a{
             color:yellow;
             text-decoration: none;
@@ -85,6 +88,5 @@
                 </p>
                 
                 <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a> | <a href="#home">Inicio</a></p>
-            
     </body>
 </html>
