add styles.css file and move the css code from index.html to css

--- a/index.html
+++ b/index.html
@@ -3,52 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>José Arpaia.</title>
+        <link rel="stylesheet" href="styles.css" class="">
     </head>
-    <style>
-        body{
-            background-color: red;
-            color: white;
-            font-family: sans-serif;
-        }
-        h1{
-            text-align: center;
-            color: blue;
-            background-color: yellow;
-        }
-        #primer_post{
-            text-align: justify;
-        }
-        h5{
-            font-size: 10px;
-            color: rgb(247, 255, 0);
-        }
-        h2{
-            text-align: center;
-            font-size: 200%;
-            color: yellow;
-            text-decoration: underline;
-        }
-        h3{
-            color:yellow;
-        }
-        a{
-            color:yellow;
-            text-decoration: none;
-        }
-        p{
-            text-align: justify;
-        }
-        #tips{
-            font-size: 25px;
-            color: yellow;
-        }
-        #memo{
-            text-align: right;
-            color: dark red;
-            font-family: helvetica;
-        }
-        
-    </style>
     <body>
         
         <h1 id="home">Blog de la universidad</h1>
