improve the structure of the web page and split code on the css fill. add a style nav on html but temporary

--- a/index.html
+++ b/index.html
@@ -2,12 +2,74 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>José Arpaia.</title>
-        <link rel="stylesheet" href="styles.css" class="">
+        <title>José Arpaia</title>
+        <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
+        <!--<link rel="stylesheet" href="styles.css" class=""> -->
+        <style>
+            body {
+                background-image: url(img/bg-new-york.jpg);
+            }
+
+            body div {
+                background-color: rgb(215, 196, 226);
+            }
+            a {
+                text-decoration: none;
+                color: red;
+            }
+        </style>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="#">Sobre mi | </a>
+                <a href="#">Proyectos | </a>
+                <a href="#">Escritos | </a>
+                <a href="#">Contacto</a>
+            </nav>
+            <div class="titulos-header">
+                <h1>Bienvenidos a mi pagina web.</h1>
+                <h2>Soy Jose Arpaia <a href="#"><i><b><span>Lee sobre mi mas bajo.</span></b></i></a></h2>
+            </div>
+        </header>
+        <main>
+            <section class="sobre-mi">
+                <h2>Este soy yo!!</h2>
+                <div class="cont-sobre-mi">
+                    <div class="cont-sobre-studios">
+                        <img src="" alt="">
+                        <h4>1 Soy estudiante</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
+                    </div>
+                    <div class="cont-sobre-futbol">
+                        <img src="" alt="">
+                        <h4>2 Amo el futbol</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
+                    </div>
+                    <div class="cont-sobre-hobbies">
+                        <img src="" alt="">
+                        <h4>2 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
+                    </div>
+                </div>
+            </section>
+            <section class="proyectos">
+                <h2>Mis proyectos</h2>
+            </section>
+        </main>
+        <footer>
+            <div class="footer-cont">
+                <hr>
+                <h3>Redes sociales</h3> 
+                <a href="#">josearpaiaquintero@gmail.com | </a>
+                <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Github</a>
+                <h2>&copy; | Hecho por <img class="copyrignt-img" src="img/faviconJA- 32x32.png" alt=""><span>Jose Arpaia</span></h2>
+            </div>
+        </footer>
         
-        <h1 id="home">Blog de la universidad</h1>
+        <!-- <h1 id="home">Blog de la universidad</h1>
         <h5 id="memo">In development process.<br>This is just an experiment.<br>Please excuse us for the troubles.</h5>
 
         <h3>INDICE</h3>
@@ -43,6 +105,6 @@
                     <strong><em>Un ultimo tip</em></strong>, aprovecha el tiempo, no es el unico recurso verdaderamente no renovable!
                 </p>
                 
-                <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a> | <a href="#home">Inicio</a></p>
+                <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a> | <a href="#home">Inicio</a></p> -->
     </body>
 </html>
