--- a/index.html
+++ b/index.html
@@ -1,116 +1,147 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>José Arpaia</title>
-        <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
-        <!--<link rel="stylesheet" href="styles.css" class=""> -->
-        <style>
-            body {
-                background-image: url(img/bg-new-york.jpg);
-            }
-
-            body div {
-                background-color: rgb(215, 196, 226);
-            }
-            h2 {
-                text-decoration: none;
-                color: red;
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#sobre-mi">Sobre mi | </a>
-                <a href="#proyectos">Proyectos | </a>
-                <a href="#articulos">Escritos | </a>
-                <a href="#contact">Contacto</a>
-            </nav>
-            <div class="titulos-header">
-                <h1>Bienvenidos a mi pagina web.</h1>
-                <h2>Soy Jose Arpaia <a href="#"><i><b><span>Lee sobre mi mas bajo.</span></b></i></a></h2>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>José Arpaia</title>
+    <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
+    <!--<link rel="stylesheet" href="styles.css" class=""> -->
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#sobre-mi">Sobre mi | </a>
+            <a href="#proyectos">Proyectos | </a>
+            <a href="#articulos">Escritos | </a>
+            <a href="#contact">Contacto</a>
+        </nav>
+        <div class="titulos-header">
+            <h1>Bienvenidos a mi pagina web.</h1>
+            <h2>Mi nombre es Jose Arpaia y aqui podras saber un poco mas sobre mi y mi historia.</h2>
+            <a href="#"><i><b><span>Lee más aquí.</span></b></i></a>
+        </div>
+    </header>
+    <main>
+        <section class="contenedor sobre-mi" id="sobre-mi">
+            <h2>Este soy yo!!</h2>
+            <div class="cont-sobre-mi">
+                <div class="cont-sobre-studios">
+                    <img src="" alt="Jose Arpaia">
+                    <h4>1 Soy estudiante</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
+                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
+                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
+                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
+                        eos!</p>
+                </div>
+                <div class="cont-sobre-futbol">
+                    <img src="" alt="">
+                    <h4>2 Amo el futbol</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
+                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
+                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
+                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
+                        eos!</p>
+                </div>
+                <div class="cont-sobre-hobbies">
+                    <img src="" alt="">
+                    <h4>2 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
+                        explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
+                        mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit
+                        voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat
+                        eos!</p>
+                </div>
             </div>
-        </header>
-        <main>
-            <section class="sobre-mi" id="sobre-mi">
-                <h2>Este soy yo!!</h2>
-                <div class="cont-sobre-mi">
-                    <div class="cont-sobre-studios">
-                        <img src="" alt="">
-                        <h4>1 Soy estudiante</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
-                    </div>
-                    <div class="cont-sobre-futbol">
-                        <img src="" alt="">
-                        <h4>2 Amo el futbol</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
-                    </div>
-                    <div class="cont-sobre-hobbies">
-                        <img src="" alt="">
-                        <h4>2 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati mollitia aperiam veniam quasi dicta. Eligendi adipisci illo ullam repellat reprehenderit voluptas beatae sequi ducimus, expedita nulla magnam quos, molestiae deserunt distinctio fugiat eos!</p>
-                    </div>
+        </section>
+        <section class="contenedor proyectos" id="proyectos">
+            <h2>Mis proyectos</h2>
+            <div class="containt-mis-proyectos">
+                <div class="proy-card">
+                    <img src="" alt="">
+                    <h3>Proyecto 1</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
                 </div>
-            </section>
-            <section class="proyectos" id="proyectos">
-                <h2>Mis proyectos</h2>
-                <div class="containt-mis-proyectos">
-                    <div class="proy-card">
-                        <img src="" alt="">
-                        <h3>Proyecto 1</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="proy-card">
-                        <h3>Proyecto 2</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="proy-card">
-                        <h3>Proyecto 3</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="proy-card">
-                        <h3>Proyecto 4</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
+                <div class="proy-card">
+                    <h3>Proyecto 2</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
                 </div>
-            </section>
-            <section class="articulos-escritos" id="articulos">
-                <h2>Escritos</h2>
-                <div class="container-arti">
-                    <div class="art-card">
-                        <img src="" alt="">
-                        <h3>Proyecto 1</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="art-card">
-                        <h3>Articulo 2</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="art-card">
-                        <h3>Articulo 3</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
-                    <div class="art-card">
-                        <h3>Articulo 4</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde dolorum ea laborum praesentium non quod.</p>
-                    </div>
+                <div class="proy-card">
+                    <h3>Proyecto 3</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
                 </div>
-            </section>
-        </main>
-        <footer id="contact">
-            <div class="footer-cont">
-                <h2>Contacto</h3> 
+                <div class="proy-card">
+                    <h3>Proyecto 4</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
+                </div>
+            </div>
+        </section>
+        <section class="contenedor articulos-escritos" id="articulos">
+            <h2>Escritos</h2>
+            <div class="container-arti">
+                <div class="art-card">
+                    <img src="" alt="">
+                    <h3>Articulo 1</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
+                </div>
+                <div class="art-card">
+                    <h3>Articulo 2</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
+                </div>
+                <div class="art-card">
+                    <h3>Articulo 3</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
+                </div>
+                <div class="art-card">
+                    <h3>Articulo 4</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
+                        similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
+                        dolorum ea laborum praesentium non quod.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="contenedor" id="contact">
+         <h2>Contacto</h2>
+         <form action="">
+             <input type="text" name="nombre" placeholder="Nombre">
+             <br>
+             <input type="text" name="apellido" placeholder="Apellido">
+             <br>
+             <input type="email" name="email" placeholder="Email" required>
+             <br>
+             <textarea name="mensaje" id="mensaje" placeholder="Escriba su mensaje aqui..." cols="10" rows="5" required></textarea>
+             <br>
+             <input type="submit" value="Enviar">
+         </form>
+    </section>
+    <footer>
+        <div class="footer-cont">
+            <h2>Redes Sociales</h3>
                 <hr>
                 <a href="#">josearpaiaquintero@gmail.com | </a>
                 <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
                 <a href="#">Twitter</a>
                 <a href="#">Github</a>
-                <h2>&copy; | Hecho por <img class="copyrignt-img" src="img/faviconJA- 32x32.png" alt=""><span>Jose Arpaia</span></h2>
-            </div>
-        </footer>
-        
-        <!-- <h1 id="home">Blog de la universidad</h1>
+                <h2>&copy; | Hecho por <img class="copyrignt-img" src="img/faviconJA- 32x32.png" alt=""><span>Jose
+                        Arpaia</span></h2>
+        </div>
+    </footer>
+
+    <!-- <h1 id="home">Blog de la universidad</h1>
         <h5 id="memo">In development process.<br>This is just an experiment.<br>Please excuse us for the troubles.</h5>
 
         <h3>INDICE</h3>
@@ -147,5 +178,5 @@
                 </p>
                 
                 <p id="end">Made by <a href="https://www.facebook.com/jose.arpaia"><em>José Arpaia</em></a> | <a href="#home">Inicio</a></p> -->
-    </body>
+</body>
 </html>
