--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <title>José Arpaia</title>
     <link rel="shortcut icon" href="img/faviconJA.ico" type="image/x-icon">
-    <!--<link rel="stylesheet" href="styles.css" class=""> -->
+    <link rel="stylesheet" href="styles.css" class="">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#sobre-mi">Sobre mi | </a>
-            <a href="#proyectos">Proyectos | </a>
-            <a href="#articulos">Escritos | </a>
+            <!-- <a id="name" href="#">Jose Arpia</a> -->
+            <a href="#sobre-mi">Sobre mi</a>
+            <a href="#proyectos">Proyectos</a>
+            <a href="#articulos">Escritos</a>
             <a href="#contact">Contacto</a>
         </nav>
         <div class="titulos-header">
-            <h1>Bienvenidos a mi pagina web.</h1>
-            <h2>Mi nombre es Jose Arpaia y aqui podras saber un poco mas sobre mi y mi historia.</h2>
-            <a href="#"><i><b><span>Lee más aquí.</span></b></i></a>
+            <h1>SOY JOSE ARPAIA</h1>
+            <h2>Y soy desarrollar web.</h2>
+            <a href="#"><i><b>Esta es mi historia</b></i></a>
         </div>
     </header>
     <main>
@@ -130,14 +131,15 @@
     </section>
     <footer>
         <div class="footer-cont">
-            <h2>Redes Sociales</h3>
-                <hr>
-                <a href="#">josearpaiaquintero@gmail.com | </a>
-                <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
-                <a href="#">Twitter</a>
-                <a href="#">Github</a>
-                <h2>&copy; | Hecho por <img class="copyrignt-img" src="img/faviconJA- 32x32.png" alt=""><span>Jose
-                        Arpaia</span></h2>
+            <h2>Redes Sociales</h2>
+            <hr>
+            <a href="#">josearpaiaquintero@gmail.com</a>
+            <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Discord Server</a>
+            <a href="#">Instagram</a>
+            <a href="#">Github</a>
+            <h2 class="copyright-footer">&copy; Todos los derechos reservados | Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
         </div>
     </footer>
 
