updated contact form

--- a/index.html
+++ b/index.html
@@ -73,18 +73,21 @@
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
+                    <img src="" alt="">
                     <h3>Proyecto 2</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
+                    <img src="" alt="">
                     <h3>Proyecto 3</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
+                    <img src="" alt="">
                     <h3>Proyecto 4</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
@@ -103,18 +106,21 @@
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
+                    <img src="" alt="">
                     <h3>Articulo 2</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
+                    <img src="" alt="">
                     <h3>Articulo 3</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
+                    <img src="" alt="">
                     <h3>Articulo 4</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
@@ -141,17 +147,17 @@
          </div>
     </section>
     <footer>
+        <h2>Redes Sociales</h2>
+        <hr>
         <div class="footer-cont">
-            <h2>Redes Sociales</h2>
-            <hr>
-            <a href="#">josearpaiaquintero@gmail.com</a>
+            <!-- <a href="#">josearpaiaquintero@gmail.com</a> -->
             <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
             <a href="#">Twitter</a>
             <a href="#">Discord Server</a>
             <a href="#">Instagram</a>
             <a href="#">Github</a>
-            <h2 class="copyright-footer">&copy; Todos los derechos reservados | Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
         </div>
+        <h2 class="copyright-footer">&copy; Todos los derechos reservados | Hecho por <img src="img/faviconJA- 32x32.png" alt=""><span> Jose Arpaia</span></h2>
     </footer>
 
     <!-- <h1 id="home">Blog de la universidad</h1>
