--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
          </div>
     </section>
     <footer>
-        <h2>Redes Sociales</h2>
         <hr>
+        <h2 class="footer__h2">Redes Sociales</h2>
         <div class="footer-cont">
             <!-- <a href="#">josearpaiaquintero@gmail.com</a> -->
             <a href="https://www.facebook.com/jose.arpaia">Facebook</a>
