new style to the web, more responsive and added a new section called known techs

--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
                 </div>
             </div>
         </section>
+        <section class="contenedor techs">
+            <h2>Tecnologias Dominadas</h2>
+            <div class="cont-techs">
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+            </div>
+        </section>
         <section class="contenedor proyectos" id="proyectos">
             <h2>Mis proyectos</h2>
             <div class="container-mis-proyectos">
