new section called known techs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 <body>
     <header>
+        <!-- <img class="header__img" src="img/bg-new-york.jpg" title="New York" alt="New York Landscape"> -->
         <nav>
-            <span><a id="name" href="./">Web Dev</a></span>
+            <span><a id="name" href="./">Jose Arpaia</a></span>
             <a href="#sobre-mi">Sobre mi</a>
             <a href="#proyectos">Proyectos</a>
             <a href="#articulos">Escritos</a>
@@ -23,15 +24,16 @@
         </nav>
         <div class="titulos-header">
             <div class="titulos-header--h1">
-                <h1>Mi nombre es Jose Arpaia</h1>
-                <h2>Soy desarrollar web.</h2>                
+                <h1>Desarrollo Web</h1>             
             </div>
-            <a href="#">Mi historia</a>
+            <div class="titulos-header--a">
+                <a href="#">Aprender más >></a>
+            </div>
         </div>
     </header>
     <main>
         <section class="contenedor sobre-mi" id="sobre-mi">
-            <h2>Este soy yo!!</h2>
+            <h2>Un poco de mí</h2>
             <div class="cont-sobre-mi">
                 <div class="cont-sobre-studios">
                     <img src="" alt="Jose Arpaia" title="Jose Arpaia">
@@ -43,7 +45,7 @@
                         eos!</p>
                 </div>
                 <div class="cont-sobre-futbol">
-                    <img src="" alt="kkk" title="HOLA">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h4>2 Amo el futbol</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
                         explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
@@ -52,7 +54,7 @@
                         eos!</p>
                 </div>
                 <div class="cont-sobre-hobbies">
-                    <img src="" alt="sssss" title="Que haces?">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h4>3 Hobbies (SPOILER: SOY CINEFILO!!)</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium atque iusto iure adipisci
                         explicabo doloremque eum ex vero, ipsum illum mollitia fuga molestiae. Commodi magnam obcaecati
@@ -62,32 +64,57 @@
                 </div>
             </div>
         </section>
+        <section class="contenedor techs">
+            <h2>Tecnologias Dominadas</h2>
+            <div class="cont-techs">
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+                <div class="card">
+                    <img src="" alt="Prueba" title="Prueba">
+                    <h3>tech 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati quisquam deleniti voluptas fugit culpa, iusto molestias officiis, rem, molestiae nulla tenetur aspernatur beatae pariatur incidunt excepturi saepe atque consequuntur.</p>
+                </div>
+            </div>
+        </section>
         <section class="contenedor proyectos" id="proyectos">
             <h2>Mis proyectos</h2>
             <div class="container-mis-proyectos">
                 <div class="proy-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 1</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 2</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 3</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="proy-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Proyecto 4</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
@@ -99,28 +126,28 @@
             <h2>Escritos</h2>
             <div class="container-arti">
                 <div class="art-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 1</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 2</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 3</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
                         dolorum ea laborum praesentium non quod.</p>
                 </div>
                 <div class="art-card">
-                    <img src="" alt="">
+                    <img src="" alt="Prueba" title="Prueba">
                     <h3>Articulo 4</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos maxime ratione fugiat iure
                         similique, voluptatibus assumenda tempora odio saepe adipisci temporibus qui perferendis unde
@@ -130,7 +157,7 @@
         </section>
     </main>
     <section class="contenedor contact" id="contacto">
-         <h2>Contacto</h2>
+         <h2>Formulario de Contacto</h2>
          <div>
             <form class="form" action="form">
                 <div class="form__img">
