modifed header cover image to fit to cover container, also set a min-width to the card inside sections

--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 </head>
 <body>
     <header>
-        <!-- <img class="header__img" src="img/bg-new-york.jpg" title="New York" alt="New York Landscape"> -->
-        <nav>
-            <span><a id="name" href="./">Jose Arpaia</a></span>
-            <a href="#sobre-mi">Sobre mi</a>
-            <a href="#proyectos">Proyectos</a>
-            <a href="#articulos">Escritos</a>
-            <a href="#contacto">Contacto</a>
-        </nav>
-        <div class="titulos-header">
-            <div class="titulos-header--h1">
-                <h1>Desarrollo Web</h1>             
-            </div>
-            <div class="titulos-header--a">
-                <a href="#">Aprender más >></a>
+        <div class="header__bg" style="background-image: url(img/bg-new-york.jpg) ;">
+            <nav>
+                <span><a id="name" href="./">José Arpaia</a></span>
+                <a href="#sobre-mi">Sobre mi</a>
+                <a href="#proyectos">Proyectos</a>
+                <a href="#articulos">Escritos</a>
+                <a href="#contacto">Contacto</a>
+            </nav>
+            <div class="titulos-header">
+                <div class="titulos-header--h1">
+                    <h1>Desarrollo Web</h1>             
+                </div>
+                <div class="titulos-header--a">
+                    <a href="#">Aprender más >></a>
+                </div>
             </div>
         </div>
     </header>
