header menu just became responsive to mobile

--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
     <header>
         <div class="header__bg" style="background-image: url(img/bg-new-york.jpg) ;">
             <nav>
-                <span><a id="name" href="./">José Arpaia</a></span>
+                <span>
+                    <img src="img/faviconJA- 32x32.png" alt="Logo" title="Jose Arpaia">
+                    <!-- <a id="name" href="./">José Arpaia</a> -->
+                </span>
                 <a href="#sobre-mi">Sobre mi</a>
                 <a href="#proyectos">Proyectos</a>
                 <a href="#articulos">Escritos</a>
                 <a href="#contacto">Contacto</a>
+                <a href="#">Menu</a>
             </nav>
             <div class="titulos-header">
                 <div class="titulos-header--h1">
                     <h1>Desarrollo Web</h1>             
                 </div>
                 <div class="titulos-header--a">
-                    <a href="#">Aprender más >></a>
+                    <a href="#">Conoceme >> </a>
                 </div>
             </div>
         </div>
